--- a/Cosmetics/appsettings.json
+++ b/Cosmetics/appsettings.json
@@ -22,6 +22,11 @@
     "ApiSecret": "zdZi4VdeuszZ6M-4VuBUPiEilbw"
   },
 
+  "GeminiApi": {
+    "ApiKey": "AIzaSyBBNF_EBm8abznri7o7Yhnt1HpaRCMxgak"
+  },
+  
+
   "PayOS": {
     "ClientId": "ec4e4948-f259-4c5e-8455-785e850f2101",
     "ApiKey": "ebaf3aa1-f907-4bd5-a177-ac3432daa1c5",
