--- a/Cosmetics/efpt.config.json
+++ b/Cosmetics/efpt.config.json
@@ -43,6 +43,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[Images]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[KOLVideos]",
          "ObjectType": 0
       },
@@ -63,6 +67,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[SkinAnalysisResults]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[TransactionAffiliates]",
          "ObjectType": 0
       },
@@ -80,6 +88,7 @@
    "UseAsyncStoredProcedureCalls": true,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
+   "UseDatabaseNamesForRoutines": true,
    "UseDateOnlyTimeOnly": true,
    "UseDbContextSplitting": false,
    "UseDecimalDataAnnotationForSprocResult": true,
@@ -87,6 +96,7 @@
    "UseHandleBars": false,
    "UseHierarchyId": false,
    "UseInflector": true,
+   "UseInternalAccessModifiersForSprocsAndFunctions": false,
    "UseLegacyPluralizer": false,
    "UseManyToManyEntity": false,
    "UseNoDefaultConstructor": false,
@@ -98,5 +108,6 @@
    "UseSchemaFolders": false,
    "UseSchemaNamespaces": false,
    "UseSpatial": false,
-   "UseT4": false
+   "UseT4": false,
+   "UseT4Split": false
 }
