deployment BE + DB

--- a/Cosmetics/appsettings.json
+++ b/Cosmetics/appsettings.json
@@ -8,7 +8,7 @@
     "SecretKey": "FreeCourseDemoASPNETCoreWebAPI22" // Có thể dùng chung với AppSettings
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=CosmeticShopDB;User Id=sa;Password=12345;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=SQL1004.site4now.net;Initial Catalog=db_abbd60_cosmo;User Id=db_abbd60_cosmo_admin;Password=longtran2407-001;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
